--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
         ></textarea><br>
         <button type="submit">Submit</button>
     </form>
+
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
