--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
