--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Contact Form Test</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Email Template</title>
 </head>
+
 <body>
-    <h1>Contact Us!</h1>
-    <p>Send a message and we will get back to you ASAP</p>
+    <h1>Contact us</h1>
+    <p>Send a message and we will get back to you within 24 hours.</p>
     <form class="contact-form">
-        <label for="">Name</label><br>
-        <input class="name" type="text" placeholder="name"><br>
-        <label for="">E-mail</label><br>
-        <input class="email" type="email" placeholder="email"><br>
-        <label for="">Message</label>
-        <textarea
-            class="message"
-            name="message"
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="message"
-        ></textarea><br>
+        <label for="">Name</label><br />
+        <input class="name" type="text" placeholder="name" /><br />
+        <label for="">Email</label><br />
+        <input class="email" type="email" placeholder="email" /><br />
+        <label for="">Message</label><br />
+        <textarea class="message" name="" id="" cols="30" rows="10" placeholder="message"></textarea><br />
         <button type="submit">Submit</button>
     </form>
 
