--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <p>Send a message and we will get back to you within 24 hours.</p>
         <form class="contact-form">
             <label for="">Name</label><br />
-            <input class="name" type="text" placeholder="name" /><br />
+            <input class="name" type="text" placeholder="name" required/><br />
             <label for="">Email</label><br />
-            <input class="email" type="email" placeholder="email" /><br />
+            <input class="email" type="email" placeholder="email" required/><br />
             <label for="">Message</label><br />
-            <textarea class="message" name="" id="" cols="30" rows="10" placeholder="message"></textarea><br />
+            <textarea class="message" name="" id="" cols="30" rows="10" placeholder="message" required></textarea><br />
             <button type="submit">Submit</button>
         </form>
 
