--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <button type="submit">Submit</button>
         </form>
 
+        <div class="infosResults"></div>
+
         <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase.js"></script>
         <script src="app.js"></script>
     </body>
